# unity-wrapper

./: README.md
plugin/: .gitignore  CMakeLists.txt  README.md
plugin/examples/: main_depthai.cpp  main_replay.cpp
plugin/include/spectacularAI/unity/: depthai.hpp  mapping.hpp  output.hpp  replay.hpp  types.hpp  util.hpp
plugin/src/: depthai.cpp  mapping.cpp  output.cpp  replay.cpp  util.cpp
unity-examples/Assets/SpectacularAI/Examples/AprilTag/Images/TagStandard41h12/Materials/: 0.mat  1.mat  2.mat  3.mat
unity-examples/Assets/SpectacularAI/Examples/AprilTag/Models/: mesh.mtl
unity-examples/Assets/SpectacularAI/Examples/AprilTag/Prefab/: AprilTag.prefab
unity-examples/Assets/SpectacularAI/Examples/AprilTag/Scenes/: AprilTag.unity
unity-examples/Assets/SpectacularAI/Examples/AprilTag/Scripts/: AprilTag.cs  AprilTagController.cs
unity-examples/Assets/SpectacularAI/Examples/Common/Materials/: Blue.mat  Green.mat  PointCloudMaterial.mat  Red.mat
unity-examples/Assets/SpectacularAI/Examples/Common/Prefabs/: VIO.prefab
unity-examples/Assets/SpectacularAI/Examples/Common/Scripts/: ApplicationQuitOnEscape.cs  CameraPoseRenderer.cs  ThirdPersonFollow.cs
unity-examples/Assets/SpectacularAI/Examples/Common/Shaders/: PointShader.shader
unity-examples/Assets/SpectacularAI/Examples/HelloDepthAI/Scenes/: HelloDepthAI.unity
unity-examples/Assets/SpectacularAI/Examples/HelloReplay/Scenes/: HelloReplay.unity
unity-examples/Assets/SpectacularAI/Examples/HelloReplay/Scripts/: ReplayController.cs
unity-examples/Assets/SpectacularAI/Examples/MappingVisu/Scenes/: MappingVisu.unity
unity-examples/Assets/SpectacularAI/Examples/MappingVisu/Scripts/: DepthAIController.cs  MapRenderer.cs  PointCloudRenderer.cs
unity-examples/Assets/SpectacularAI/Examples/Record/Scenes/: Record.unity
unity-examples/Assets/SpectacularAI/Examples/Record/Scripts/: DepthAIController.cs
unity-examples/Assets/SpectacularAI/Plugins/Linux_Ubuntu_x86-64/: LICENSE  libspectacularAI_depthaiPlugin.so.1
unity-examples/Assets/SpectacularAI/Plugins/Windows/: LICENSE
unity-examples/Assets/SpectacularAI/SDK/: Utility.cs
unity-examples/Assets/SpectacularAI/SDK/Mapping/: Frame.cs  FrameSet.cs  KeyFrame.cs  Map.cs  MapperOutput.cs  MappingAPI.cs  PointCloud.cs
unity-examples/Assets/SpectacularAI/SDK/Native/: ApiConstants.cs
unity-examples/Assets/SpectacularAI/SDK/Replay/: Replay.cs  ReplayAPI.cs
unity-examples/Assets/SpectacularAI/SDK/Types/: Camera.cs  CameraPose.cs  Matrix3d.cs  Matrix4d.cs  PixelCoordinates.cs  Pose.cs  Quaternion.cs  RGB24.cs  TrackingStatus.cs  Vector3d.cs  Vector3f.cs  VioOutput.cs  VioParameter.cs
unity-examples/Assets/SpectacularAI/SDK/Wrappers/DepthAI/: Configuration.cs  Pipeline.cs  PoseProvider.cs  Session.cs  Vio.cs
unity-examples/ProjectSettings/: ProjectSettings.asset
